@@ -19,15 +19,15 @@ module ActiveScaffold::Actions
     protected
 
     def show_respond_to_json
-      render :text => response_object.to_json(:only => active_scaffold_config.show.columns.names), :content_type => Mime::JSON, :status => response_status
+      render :text => response_object.to_json(:only => show_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(show_columns_names), :methods => virtual_columns(show_columns_names)), :content_type => Mime::JSON, :status => response_status
     end
 
     def show_respond_to_yaml
-      render :text => Hash.from_xml(response_object.to_xml(:only => active_scaffold_config.show.columns.names)).to_yaml, :content_type => Mime::YAML, :status => response_status
+      render :text => Hash.from_xml(response_object.to_xml(:only => show_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(show_columns_names), :methods => virtual_columns(show_columns_names))).to_yaml, :content_type => Mime::YAML, :status => response_status
     end
 
     def show_respond_to_xml
-      render :xml => response_object.to_xml(:only => active_scaffold_config.show.columns.names), :content_type => Mime::XML, :status => response_status
+      render :xml => response_object.to_xml(:only => show_columns_names + [active_scaffold_config.model.primary_key], :include => association_columns(show_columns_names), :methods => virtual_columns(show_columns_names)), :content_type => Mime::XML, :status => response_status
     end
 
     def show_respond_to_js
@@ -37,6 +37,11 @@ module ActiveScaffold::Actions
     def show_respond_to_html
       render :action => 'show'
     end
+
+    def show_columns_names
+      active_scaffold_config.show.columns.names
+    end
+
     # A simple method to retrieve and prepare a record for showing.
     # May be overridden to customize show routine
     def do_show
