@@ -21,6 +21,7 @@
 - Add refresh_link option to :select form_ui
 - Sort association options in select :form_ui using column.sort_by :sql
 - Support :radio form_ui in association columns
+- Improve XML/JSON/YAML: return primary key, associations and virtual columns (a method must exist in model)
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
